# silvasonic_leaflistener

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  PC_BEFEHLE.md  QUICKSTART.md  README.md  Z_PC_BEFEHLE.md  agent_brain  architecture_audit.md  audit_iam_connectivity.md  audit_report_TECH.md  birdnet_cov.txt  check_db_host.py  check_output_round6.txt  config.example.env  container_logs.txt  dashboard_logs.txt  debug_hc.py  debug_info.txt  diag.py  healthchecker_cov.txt  implementation_plan.md  livesound_cov.txt  optimize_logo.py  output.txt  output7.txt  output_final.txt  podman-compose.dev.yml  podman-compose.yml  process_images.py  ps_output.txt  pyproject.toml  recorder_cov.txt  run_cov.sh  seed_db.py  setup.sh  test_log.txt  test_outcome.txt  tree_output.txt  (+6 more)
containers/birdnet/: Dockerfile  README.md  config.yml  debug_birdnet.py  inspect_birdnet.py  inspection_result.txt  pyproject.toml  requirements-test.txt  requirements.txt  test_clip_saving.py  test_config_load.py
containers/birdnet/src/: analyzer.py  config.py  database.py  main.py  migrate_schema.py  verify_audio.py  verify_fix.py  watcher.py
containers/birdnet/src/silvasonic_birdnet/: analyzer.py  config.py  database.py  main.py  migrate_schema.py  models.py  watcher.py
containers/birdnet/tests/: conftest.py  test_analyzer.py  test_analyzer_timestamp.py  test_birdnet_main.py  test_config.py  test_database.py  test_main.py  test_models.py  test_watcher.py
containers/controller/: Dockerfile  README.md  pyproject.toml
containers/controller/src/: device_manager.py  main.py  mic_profiles.py  podman_client.py
containers/controller/src/silvasonic_controller/: api.py  device_manager.py  main.py  persistence.py  podman_client.py  profiles_loader.py  service_manager.py
containers/controller/tests/: conftest.py  test_controller_logic.py  test_controller_main.py  test_device_manager.py  test_main.py  test_persistence.py  test_podman_client.py  test_profiles_loader.py  test_reconciliation.py  test_service_loader.py  test_service_manager.py  test_state_adoption.py
containers/dashboard/: Dockerfile  README.md  debug_import.py  debug_imports.py  entrypoint.sh  package.json  pyproject.toml  tailwind.config.js  test_output.txt  test_output_2.txt  verify_logic_standalone.py  verify_output.py  verify_result.txt  verify_settings.py  verify_stats_fix.py
containers/dashboard/src/: auth.py  check_imports.py  main.py  services.py  services_weather_fragment.py  settings.py  spectrogram.py  verify_container_order.py  verify_logging.py  verify_sorting_logic.py  verify_stats_fix.py  wikimedia.py
containers/dashboard/src/services/: __init__.py  analysis.py  birdnet.py  birdnet_stats.py  carrier.py  common.py  database.py  health.py  recorder.py  system.py  weather.py
containers/dashboard/src/silvasonic_dashboard/: auth.py  check_db.py  main.py  models.py  settings.py  spectrogram.py  wikimedia.py
containers/dashboard/src/templates/: about.html  analyzer.html  base.html  birdnet.html  birdnet_discover.html  birdnet_species.html  index.html  livesound.html  login.html  logs.html  recorder.html  settings.html  stats.html  uploader.html  weather.html
containers/dashboard/tests/: conftest.py  reproduce_wiki_fetch.py  test_async_services.py  test_auth_logic.py  test_auth_routes.py  test_birdnet_enrichment.py  test_birdnet_enrichment_negative.py  test_birdnet_integration.py  test_birdnet_stats.py  test_logs.py  test_wikimedia.py
containers/healthchecker/: Dockerfile  pyproject.toml
containers/healthchecker/src/: mailer.py  main.py
containers/healthchecker/src/silvasonic_healthchecker/: mailer.py  main.py  models.py
containers/healthchecker/tests/: conftest.py  test_dynamic_discovery.py  test_ghosts.py  test_rich_status.py
containers/livesound/: Dockerfile  README.md  pyproject.toml
containers/livesound/src/: config.py  main.py
containers/livesound/src/live/: processor.py  server.py
containers/livesound/src/silvasonic_livesound/: config.py  main.py
containers/livesound/tests/: conftest.py  test_api_integration.py  test_processor.py  test_server.py  verify_refactor.py
containers/processor/: Dockerfile  pyproject.toml
containers/processor/src/: db.py  indexer.py  janitor.py  main.py  thumbnailer.py
containers/processor/src/silvasonic_processor/: db.py  indexer.py  janitor.py  main.py  thumbnailer.py
containers/recorder/: Dockerfile  pyproject.toml
containers/recorder/mic_profiles/: generic.yml
containers/recorder/src/: main.py  mic_profiles.py  strategies.py
containers/recorder/src/microphones/: dodotronic_ultramic384k.yml  file_mock.yml  generic_usb.yml  mock.yml  rode_nt.yml
containers/recorder/src/silvasonic_ear/: main.py
containers/recorder/src/silvasonic_recorder/: config.py  main.py  mic_profiles.py  strategies.py
containers/recorder/tests/: test_mic_profiles.py  test_recorder.py  test_recorder_loop.py  test_status_error.py  test_strategies.py
containers/sound_analyser/: pyproject.toml
containers/sound_analyser/src/: config.py  main.py  test_fix.py
containers/sound_analyser/src/analyzers/: base.py  frequency.py  loudness.py  meta.py  spectrum.py
containers/sound_analyser/src/core/: database.py  pipeline.py  watcher.py
containers/sound_analyser/src/live/: processor.py  server.py
containers/uploader/: Dockerfile  pyproject.toml
containers/uploader/src/: database.py  janitor.py  main.py  rclone_wrapper.py  test_janitor.py
containers/uploader/src/silvasonic_uploader/: api.py  config.py  database.py  janitor.py  main.py  rclone_wrapper.py
containers/uploader/tests/: conftest.py  test_api.py  test_bwlimit.py  test_config.py  test_database.py  test_janitor.py  test_main.py  test_rclone.py  test_rclone_flags.py  test_uploader_main.py
containers/weather/: Dockerfile  pyproject.toml  repro.py  requirements.txt
containers/weather/src/: analysis.py  main.py
containers/weather/src/silvasonic_weather/: analysis.py  config.py  main.py  (+1 more)
containers/weather/tests/: conftest.py  output.txt  test_analysis.py  test_analysis_view.py  test_integration.py  test_weather.py
(+239 files in other folders)
