[project]
name = "silvasonic"
version = "0.1.0"
description = "Bioacoustic recording station for Raspberry Pi 5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv.workspace]
members = [
    "containers/birdnet",
    "containers/recorder",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.1.0",
    "numpy",
    "sqlalchemy",
    "watchdog",
    "soundfile",
    "pytest-playwright",
    "playwright",
    "PyYAML",
    "psutil",
    "psycopg2-binary",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "D",    # pydocstyle (Google style)
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D",    # Ignore all docstyle issues for now
    "E501", # Ignore line length
    "E501", # Ignore line length
    "W291", # Ignore trailing whitespace
    "B008", # Ignore function call in argument defaults (standard for FastAPI Depends)
    "N",    # Ignore naming conventions (legacy uppercase properties)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--ignore=containers/birdnet_test"

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "containers.*.tests.*", 
    "containers.*.tests",
]
ignore_errors = true

