[project]
name = "silvasonic"
version = "0.1.0"
description = "Bioacoustic recording station for Raspberry Pi 5"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = ["pydantic>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv.workspace]
members = [
    "containers/birdnet",
    "containers/recorder",
    "containers/weather",
    "containers/dashboard",
    "containers/controller",
    "containers/uploader",
    "containers/processor",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.1.0",
    "numpy",
    "sqlalchemy",
    "watchdog",
    "soundfile",
    "pytest-playwright",
    "playwright",
    "PyYAML",
    "psutil",
    "psycopg2-binary",
    "types-PyYAML",
    "types-aiofiles",
    "pytest-asyncio",
    "fastapi",
    "pandas",
    "httpx",
    "schedule",
    "silvasonic-controller",
    "silvasonic-recorder",
    "silvasonic-weather",
    "silvasonic-dashboard",
    "birdnet-container",
    "silvasonic-uploader",
    "pre-commit>=4.5.1",
    "pytest-sugar>=1.1.1",
    "silvasonic-processor",
    "redis",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "N",  # pep8-naming
    "D",  # pydocstyle (Google style)
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D",    # Ignore all docstyle issues for now
    "E501", # Ignore line length
    "E501", # Ignore line length
    "W291", # Ignore trailing whitespace
    "B008", # Ignore function call in argument defaults (standard for FastAPI Depends)
    "N",    # Ignore naming conventions (legacy uppercase properties)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = [
    "tests/.*",
    "containers/.*/tests/.*",
    "^\\.venv/",
    ".*/site-packages/.*",
    "site-packages/.*",
]

[tool.pytest.ini_options]
addopts = "--ignore=containers/birdnet_test --ignore=tests/e2e --ignore=containers/db --ignore=containers/gateway"

[[tool.mypy.overrides]]
module = ["tests.*", "containers.*.tests.*", "containers.*.tests"]
ignore_errors = true

[[tool.mypy.overrides]]
module = "watchdog.*"
follow_imports = "skip"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
follow_imports = "skip"
ignore_errors = true

[tool.uv.sources]
silvasonic-controller = { workspace = true }
silvasonic-recorder = { workspace = true }
silvasonic-weather = { workspace = true }
silvasonic-dashboard = { workspace = true }
birdnet-container = { workspace = true }
silvasonic-uploader = { workspace = true }
silvasonic-processor = { workspace = true }
