[project]
name = "birdnet-container"
version = "0.1.0"
description = "Silvasonic BirdNET Container"
requires-python = ">=3.11, <3.13"
dependencies = [
    "watchdog",
    "numpy",
    "librosa>=0.10.0",
    "numba>=0.57.0",
    "soundfile",
    "resampy>=0.4.0",
    "birdnet-analyzer @ git+https://github.com/birdnet-team/BirdNET-Analyzer.git",
    "PyYAML",
    "sqlalchemy",
    "psycopg2-binary",
    "psutil",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mock"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic_birdnet"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
