[project]
name = "birdnet-container"
version = "0.1.0"
description = "Silvasonic BirdNET Container"
requires-python = ">=3.11, <3.13"
dependencies = [
    "redis>=5.0.0",
    "watchdog",
    "numpy",
    "librosa>=0.10.0",
    "numba>=0.57.0",
    "soundfile",
    "resampy>=0.4.0",
    "birdnet-analyzer @ https://github.com/birdnet-team/BirdNET-Analyzer/archive/a5a9e1dae52736c6811842ad23317004404d7870.zip",
    "PyYAML",
    "sqlalchemy",
    "psycopg2-binary",
    "psutil",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "sqlmodel>=0.0.16",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mock"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic_birdnet"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
