[project]
name = "silvasonic-controller"
version = "0.1.0"
description = "Dynamic Hardware Supervisor for Silvasonic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyudev>=0.24.0",
    "pyyaml>=6.0",
    "psutil",
    "pydantic>=2.0",
    "structlog>=24.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic_controller"]
