[project]
name = "silvasonic-controller"
version = "0.2.0"
description = "Dynamic Hardware Supervisor for Silvasonic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0",
    "pyudev>=0.24.0",
    "pyyaml>=6.0",
    "psutil",
    "pydantic>=2.0",
    "structlog>=24.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic_controller"]
