[project]
name = "silvasonic-dashboard"
version = "0.1.0"
description = "Web dashboard for Silvasonic bioacoustic station"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.3",
    "psutil>=5.9.8",
    "watchfiles>=0.21.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "psycopg2>=2.9.9",
    "asyncpg>=0.29.0",
    "SQLAlchemy>=2.0.25",
    "librosa>=0.10.1",
    "matplotlib>=3.8.2",
    "numpy>=1.26.3",
    "soundfile>=0.12.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
