[project]
name = "silvasonic-healthchecker"
version = "0.1.0"
description = "Healthchecker for Silvasonic"
requires-python = ">=3.13"
dependencies = [
    "apprise",
    "psutil"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
