[project]
name = "silvasonic-livesound"
version = "0.1.0"
description = "Silvasonic Livesound - Live Audio Streaming and Visualization"
requires-python = ">=3.11, <3.13"
dependencies = [
    "redis>=5.0.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "numpy>=1.26.0,<2.0.0",
    "psutil>=5.9.0",

    "pydantic>=2.6.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "orjson>=3.9.10",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic_livesound"]
