[project]
name = "silvasonic-ear"
version = "0.1.0"
description = "Silvasonic Ear - Audio Recording Service"
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "psutil"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic_ear"]
