[project]
name = "silvasonic-recorder"
version = "0.1.0"
description = "Silvasonic Recorder - Audio Recording Service"
requires-python = ">=3.11, <3.13"
dependencies = [
    "pyyaml",
    "psutil",
    "numpy",
    "soundfile"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic_recorder"]
