[project]
name = "silvasonic-recorder"
version = "0.1.0"
description = "Silvasonic Recorder - Audio Recording Service"
requires-python = ">=3.11, <3.13"
dependencies = [
    "redis>=5.0.0",
    "pyyaml",
    "psutil",
    "pydantic>=2.0",
    "pydantic-settings",
    "structlog>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic_recorder"]
