[project]
name = "silvasonic-brain"
version = "0.1.0"
description = "Silvasonic Brain - Audio Analysis and Processing"
requires-python = "==3.11.*"
dependencies = [
    "sqlalchemy==2.0.25",
    "watchdog==3.0.0",
    "librosa==0.10.1",
    "soundfile==0.12.1",
    "numpy<2.0.0",
    "matplotlib==3.8.2",
    "pydantic==2.5.3",
    "pydub==0.25.1",
    "psycopg2-binary"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
