[project]
name = "silvasonic-uploader"
version = "0.1.0"
description = "Uploader service for Silvasonic"
requires-python = ">=3.11, <3.13"
dependencies = [
    "psutil>=5.9.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "structlog>=24.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
