[project]
name = "silvasonic-weather"
version = "0.1.0"
description = "Weather data collector for Silvasonic"
requires-python = ">=3.11"
dependencies = [
    "wetterdienst>=0.74.0",
    "marshmallow<3.20.0",
    "sqlalchemy",
    "psycopg2-binary",
    "schedule",
    "pandas",
    "polars",
    "psutil",
    "pytest",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic_weather"]
